fix: thumbnail overflow css

--- a/src/main/resources/static/css/goodsDetail.css
+++ b/src/main/resources/static/css/goodsDetail.css
@@ -169,11 +169,11 @@ div.top-right{
 	display:flex;
 	justify-content:center;
 	align-items: center;
-	overflow:hidden;
+	overflow: hidden;
 }
-#thumbnail{
+.thumbnail{
 	max-width:100%;
-    max-height: 100%;
+    height: auto;
 }
 #detail{
     width: 380px;
